<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp">

        <TextView
            android:id="@+id/formularioCadastroTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/formulario_de_cadastro"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nomeEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nome_completo"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formularioCadastroTv"
            android:autofillHints="@string/nome_completo" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomeEt"
            android:autofillHints="@string/e_mail" />

        <CheckBox
            android:id="@+id/receberEmailsCb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pergunta_email_oportunidades"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEt" />

        <EditText
            android:id="@+id/telefoneEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telefone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/receberEmailsCb"
            android:autofillHints="@string/telefone" />

        <RadioGroup
            android:id="@+id/tipoTelefoneRg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefoneEt">

            <RadioButton
                android:id="@+id/residencialRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/residencial"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/comercialRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comercial" />
        </RadioGroup>

        <Switch
            android:id="@+id/adicionarCelularSw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_celular"
            android:textOff=""
            android:textOn=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipoTelefoneRg"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <EditText
            android:id="@+id/celularEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telefone_celular"
            android:inputType="phone"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adicionarCelularSw"
            android:autofillHints="@string/telefone_celular" />

        <TextView
            android:id="@+id/sexoTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/celularEt"/>

        <RadioGroup
            android:id="@+id/sexoRg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sexoTv" >

            <RadioButton
                android:id="@+id/masculinoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/femininoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feminino" />
        </RadioGroup>

        <EditText
            android:id="@+id/dataNascimentoEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/data_de_nascimento"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sexoRg"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/formacaoTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/formacao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataNascimentoEt"/>

        <Spinner
            android:id="@+id/formacaoSp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/formacao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formacaoTv" />

        <EditText
            android:id="@+id/anoConclusaoEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/ano_de_conclusao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formacaoSp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/instituicaoEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/instituicao"
            android:inputType="textPersonName"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anoConclusaoEt"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/tituloMonografiaEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/titulo_monografia"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instituicaoEt"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/orientadorEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/orientador"
            android:inputType="textPersonName"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloMonografiaEt"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/vagasInteresseEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/vagas_de_interesse"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orientadorEt"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/salvarBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:onClick="onClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vagasInteresseEt" />

        <Button
            android:id="@+id/limpartBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/limpar"
            android:onClick="onClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/salvarBt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
